# vid2dataset

./: .gitignore  AGENTS.md  Cargo.toml  README.md  requirements.txt  vid2dataset_cli.py  vid2frame_gui.py
.github/: ffmpeg.lock.json
.github/workflows/: ci.yml  ffmpeg-dependency.yml  release.yml
apps/desktop/: index.html  package-lock.json  package.json
apps/desktop/src/: main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/ffmpeg/: NOTICE.txt
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
config/: config.yaml  presets.yaml
config/profiles/: iphone_vertical_2ds.yaml
crates/vid2dataset-cli/: Cargo.toml
crates/vid2dataset-cli/src/: main.rs
crates/vid2dataset-core/: Cargo.toml
crates/vid2dataset-core/src/: config.rs  extract.rs  ffmpeg.rs  inspect.rs  lib.rs  manifest.rs  profiles.rs
crates/vid2dataset-core/tests/: extraction.rs
docs/: architecture.md  release.md
legacy/: vid2frame.py  vid2frame_cli.py
scripts/: archive-release-artifacts.sh  build-release-ffmpeg.sh  ffmpeg-dependency.mjs  package-local.sh  setup-ffmpeg.sh  stage-release-ffmpeg.sh  verify-release-sources.sh
scripts/lib/: ffmpeg-dependency.mjs
scripts/tests/: ffmpeg-dependency.test.mjs
