[package]
name = "vid2dataset"
version = "0.2.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "vid2dataset"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
vid2dataset-core = { path = "../vid2dataset-core" }
walkdir = "2"
