[package]
name = "vid2dataset-core"
version = "0.2.0-alpha.2"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
csv = "1"
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "1"
walkdir = "2"
which = "6"

[dev-dependencies]
tempfile = "3"
