[package]
name = "vid2dataset-desktop"
version = "0.2.0-alpha.2"
description = "Cross-platform GUI for vid2dataset"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "vid2dataset_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
vid2dataset-core = { path = "../../../crates/vid2dataset-core" }
